--- a/index.html
+++ b/index.html
@@ -1,33 +1,56 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ERP (без БД)</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="container">
-    <h1>Производственный трекер (локальный)</h1>
-    
-    <div class="controls">
-      <button onclick="showCreateOrder()">+ Новый заказ</button>
-      <button onclick="exportData()">💾 Экспорт данных</button>
-      <button onclick="importData()">📂 Импорт данных</button>
-    </div>
+<div class="banner">
+  <h1>ХОЧЕШЬ ЧАТ БОТ В ТГ</h1>
+  <p>ЗАКАЖИ ЕГО У НАС</p>
+  <p>У НАС</p>
+  <p>ЗА СУЩИЕ КОПЕЙКИ</p>
+  <button>ВСЕГО ЗА 100р/мес</button>
+</div>
 
-    <div id="orders-list"></div>
+<style>
+.banner {
+  background: linear-gradient(45deg, #4a90e2, #e940c2);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  border-radius: 20px;
+  padding: 30px;
+  text-align: center;
+  color: white;
+  font-family: Arial;
+}
 
-    <div id="modal" class="modal hidden">
-      <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <div id="modal-body"></div>
-      </div>
-    </div>
+@keyframes gradient {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 
-    <input type="file" id="import-file" accept=".json" style="display:none" onchange="handleImportFile(event)">
-  </div>
+.banner h1, .banner p {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+}
 
-  <script src="app.js"></script>
-</body>
-</html>
+.banner h1 { animation-delay: 0.2s; }
+.banner p:nth-child(2) { animation-delay: 0.5s; }
+.banner p:nth-child(3) { animation-delay: 0.8s; }
+.banner p:nth-child(4) { animation-delay: 1.1s; }
+
+@keyframes fadeIn {
+  to { opacity: 1; }
+}
+
+button {
+  background: rgba(255, 255, 255, 0.2);
+  border: 2px solid white;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 30px;
+  animation: pulse 2s infinite;
+  text-shadow: 0 0 10px #ff00de;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
+</style>
