--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@ function renderTrendChart() {
   
   trendChartInstance = new Chart(ctx, {
     type: 'line',
-     {
+    data: {
       labels: dates,
       datasets: [{
         label: 'Выручка',
