--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ if (Chart.getChart(ctx)) Chart.getChart(ctx).destroy();
 const colors = ['rgba(52,211,153,0.8)','rgba(34,211,238,0.8)','rgba(167,139,250,0.8)','rgba(251,191,36,0.8)','rgba(248,113,113,0.8)','rgba(99,102,241,0.8)'];
 new Chart(ctx, {
 type: 'bar',
-data: { labels, datasets: [{ label: 'Выручка', data: values, backgroundColor: labels.map((_, i) => colors[i % colors.length]), borderColor: labels.map((_, i) => colors[i % colors.length].replace('0.8','1')), borderWidth: 2, borderRadius: 8, borderSkipped: false }] },
+ { labels, datasets: [{ label: 'Выручка',  values, backgroundColor: labels.map((_, i) => colors[i % colors.length]), borderColor: labels.map((_, i) => colors[i % colors.length].replace('0.8','1')), borderWidth: 2, borderRadius: 8, borderSkipped: false }] },
 options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false }, tooltip: { backgroundColor: 'rgba(30,41,59,0.95)', titleColor: '#f8fafc', bodyColor: '#f8fafc', callbacks: { label: ctx => { const pct = ((ctx.parsed.y / total) * 100).toFixed(1); return `${formatCurrency(ctx.parsed.y)} (${pct}%)`; } } } }, scales: { y: { beginAtZero: true, grid: { color: 'rgba(148,163,184,0.1)' }, ticks: { callback: v => formatCurrency(v), color: '#94a3b8' } }, x: { grid: { color: 'rgba(148,163,184,0.1)' }, ticks: { color: '#94a3b8' } } } }
 });
 }
@@ -796,7 +796,7 @@ if (Chart.getChart(ctx)) Chart.getChart(ctx).destroy();
 const colors = ['#34d399','#22d3ee','#a78bfa','#fbbf24','#f87171','#6366f1'];
 new Chart(ctx, {
 type: 'doughnut',
-data: { labels: Object.keys(counts), datasets: [{ data: Object.values(counts), backgroundColor: Object.keys(counts).map((_, i) => colors[i % colors.length]), borderColor: '#1e293b', borderWidth: 3, hoverOffset: 10 }] },
+ { labels: Object.keys(counts), datasets: [{  Object.values(counts), backgroundColor: Object.keys(counts).map((_, i) => colors[i % colors.length]), borderColor: '#1e293b', borderWidth: 3, hoverOffset: 10 }] },
 options: { responsive: true, maintainAspectRatio: false, cutout: '65%', plugins: { legend: { position: 'right', labels: { padding: 15, color: '#f8fafc', font: { size: 12 } } }, tooltip: { backgroundColor: 'rgba(30,41,59,0.95)', titleColor: '#f8fafc', bodyColor: '#f8fafc', callbacks: { label: ctx => { const total = ctx.dataset.data.reduce((a,b) => a+b, 0); const pct = ((ctx.parsed / total) * 100).toFixed(1); return `${ctx.label}: ${ctx.parsed} (${pct}%)`; } } } } }
 });
 const filter = document.getElementById('typeFilter');
